# raster_meta

./: CMakeLists.txt  main.c
CLI/: get_options.c
docs/: README.md
include/: PNGparser.h  argsparser.h  err.h  fileparser.h  get_options.h  init_structures.h  output_BMP_info.h  output_PNG_info.h  output_err_info.h  output_info.h  outputinfo.h  structures.h
utilites/: argsparser.c  err.c  fileparser.c  init_stuctures.c  outputinfo.c
utilites/output/: output_BMP_info.c  output_PNG_info.c  output_err_info.c  output_info.c
utilites/parsers/: PNGparser.c  argsparser.c  fileparser.c
